--- a/client_departmen/style.css
+++ b/client_departmen/style.css
@@ -11,7 +11,8 @@ h1 {
     border-radius: 10px;
 }
 
-h1 > small, h2 > small {
+h1>small,
+h2>small {
     font-size: 12px;
 }
 
@@ -37,4 +38,44 @@ h1 > small, h2 > small {
 
 .isi_berita h1 {
     background-color: pink;
+}
+
+.upload-area {
+    width: 70%;
+    height: 350px;
+    border: 2px solid lightgray;
+    border-radius: 3px;
+    margin: 0 auto;
+    text-align: center;
+    overflow: auto;
+}
+
+.upload-area:hover {
+    cursor: pointer;
+}
+
+.upload-area h2 {
+    text-align: center;
+    font-weight: normal;
+    font-family: sans-serif;
+    line-height: 50px;
+    color: darkslategray;
+}
+
+#file {
+    display: none;
+}
+
+/* Thumbnail */
+.thumbnail {
+    width: 80px;
+    height: 80px;
+    padding: 2px;
+    border: 2px solid lightgray;
+    border-radius: 3px;
+    float: left;
+}
+
+.size {
+    font-size: 12px;
 }
